@@ -1,3 +1,7 @@
+2000-05-22  Per Bothner  <per@bothner.com>
+
+	* ELisp.java (getTypeFor):  New method.
+
 2000-05-09  Per Bothner  <per@bothner.com>
 
 	* ELisp.java (<init>):  Create an ObArray rather than an Environment.
